# microeconometrics

./: .gitignore  README.md  analysis.py  pyproject.toml
microeconometrics/: descriptives.py  estimators.py  orf.py  stan.py
paper/: 1-data.tex  2-methodology.tex
